public/main.css
@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }

body {
	padding-top: 2em;
	font-family: 'Rubik', sans-serif;
	font-weight: 500;
	margin: 0 auto;
	text-align: left;
	width: 40em;
	color: #404040;
	animation: fadeIn 1s;
}

#mainScreenLogo {
	width: 30%;
	height: 30%;
	margin-left: 14em;
	margin-top: 3em;
}

#otherScreenLogo {
	width: 10%;
	height: 10%;
	margin:0em;
	margin-left: 9em;
	float: left;
}

.headerLogo {
	margin-bottom: 10em;
}

a {
	color: inherit;
  	text-decoration: inherit;
}

h1 {
	text-align: center;
	font-size: 100px;
	font-weight: 500;
	margin-top: 0em;
	margin-bottom: 0em;
}

h2 {
	text-align: center;
	font-size: 40px;
	font-weight: 500;
	margin: 0em;
	float: left;
}

button {
	font-family: 'Rubik', sans-serif;
	font-weight: 500;
	font-size: 30px;
	border-color: #00C371;
	border-width: 4px;
	border-radius: 8px;
	background-color: white;
	color: #00C371;
	display: block;
	margin: auto;
	margin-top: 1.5em;
	transition: 0.3s;
	white-space: nowrap;
}

button:hover {
	background-color: #00C371;
	color: #ffffff;
}

.roomButton {
	margin-right: 8em;
}

p {
	font-size: 40px;
}

div {
	margin-left: 1em;
	margin-top: 0em;
}

.introPrompt {
	float: left;
	margin-left: 0.2em;
	margin-right: 0.2em;
}

.landingPrompt {
	float: left;
	padding-left: 1em;
}

.mortarContainer {
	margin-top: 10em;
}

input[type=checkbox]
{
  /* Double-sized Checkboxes */
  -ms-transform: scale(2.5); /* IE */
  -moz-transform: scale(2.5); /* FF */
  -webkit-transform: scale(2.5); /* Safari and Chrome */
  -o-transform: scale(2.5); /* Opera */
  margin-top: 4.5em;
  margin-left: 2em;
}

.codeInput {
	margin: 5em;
}

